// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<CurrencyInput/> > Renders with default value 1`] = `
<input
  inputmode="decimal"
  type="text"
/>
`;

exports[`<CurrencyInput/> > Renders without error 1`] = `
<input
  class="form-control"
  id="validationCustom01"
  inputmode="decimal"
  name="inputName"
  placeholder="£1,000"
  type="text"
/>
`;
